--- a/angular.json
+++ b/angular.json
@@ -4,11 +4,11 @@
   "newProjectRoot": "projects",
   "projects": {
     "angular-component-library": {
+      "projectType": "application",
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "projectType": "application",
       "prefix": "app",
-      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -17,14 +17,14 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",
+            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -44,7 +44,19 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -70,36 +82,31 @@
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [],
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
-            ]
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
+            "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
           }
-        }
-      }
-    },
-    "angular-component-library-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "architect": {
+        },
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
@@ -111,50 +118,36 @@
               "devServerTarget": "angular-component-library:serve:production"
             }
           }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
         }
       }
     },
-    "ratify": {
-      "root": "projects/ratify",
-      "sourceRoot": "projects/ratify/src",
+    "fire-gitlab-wiki-store": {
       "projectType": "library",
+      "root": "projects/fire-gitlab-wiki-store",
+      "sourceRoot": "projects/fire-gitlab-wiki-store/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/ratify/tsconfig.lib.json",
-            "project": "projects/ratify/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "project": "projects/ratify/ng-package.prod.json"
-            }
+            "tsConfig": "projects/fire-gitlab-wiki-store/tsconfig.lib.json",
+            "project": "projects/fire-gitlab-wiki-store/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/ratify/src/test.ts",
-            "tsConfig": "projects/ratify/tsconfig.spec.json",
-            "karmaConfig": "projects/ratify/karma.conf.js"
+            "main": "projects/fire-gitlab-wiki-store/src/test.ts",
+            "tsConfig": "projects/fire-gitlab-wiki-store/tsconfig.spec.json",
+            "karmaConfig": "projects/fire-gitlab-wiki-store/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/ratify/tsconfig.lib.json",
-              "projects/ratify/tsconfig.spec.json"
+              "projects/fire-gitlab-wiki-store/tsconfig.lib.json",
+              "projects/fire-gitlab-wiki-store/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -162,7 +155,6 @@
           }
         }
       }
-    }
-  },
+    }},
   "defaultProject": "angular-component-library"
 }
